# rust-dns-server

./: Cargo.toml
src/: common.rs  dns_over_tls.rs  main.rs  resolver.rs  server.rs
